@@ -24,15 +24,54 @@ Specific tests for individual formats are in the tests/test_bzrdir.py file
 rather than in tests/branch_implementations/*.py.
 """
 
-from bzrlib.bzrdir import BzrDirTestProviderAdapter, BzrDirFormat
+from bzrlib.bzrdir import BzrDirFormat
 from bzrlib.tests import (
                           adapt_modules,
                           default_transport,
                           TestCaseWithTransport,
                           TestLoader,
+                          TestScenarioApplier,
                           TestSuite,
                           )
 from bzrlib.transport.memory import MemoryServer
+
+
+class BzrDirTestProviderAdapter(TestScenarioApplier):
+    """A tool to generate a suite testing multiple bzrdir formats at once.
+
+    This is done by copying the test once for each transport and injecting
+    the transport_server, transport_readonly_server, and bzrdir_format
+    classes into each copy. Each copy is also given a new id() to make it
+    easy to identify.
+    """
+
+    def __init__(self, vfs_factory, transport_server, transport_readonly_server,
+        formats):
+        """Create an object to adapt tests.
+
+        :param vfs_server: A factory to create a Transport Server which has
+            all the VFS methods working, and is writable.
+        """
+        self._vfs_factory = vfs_factory
+        self._transport_server = transport_server
+        self._transport_readonly_server = transport_readonly_server
+        self.scenarios = self.formats_to_scenarios(formats)
+    
+    def formats_to_scenarios(self, formats):
+        """Transform the input formats to a list of scenarios.
+
+        :param formats: A list of bzrdir_format objects.
+        """
+        result = []
+        for format in formats:
+            scenario = (format.__class__.__name__, {
+                "vfs_transport_factory":self._vfs_factory,
+                "transport_server":self._transport_server,
+                "transport_readonly_server":self._transport_readonly_server,
+                "bzrdir_format":format,
+                })
+            result.append(scenario)
+        return result
 
 
 class TestCaseWithBzrDir(TestCaseWithTransport):
